map: Parse coordinate tags directly from the Exif data

Beforehand the coordinates were parsed from libexif's formatted output
strings. This has shown to be unreliable when the output format changed.

https://bugzilla.gnome.org/show_bug.cgi?id=654650